新文章《微信jssdk使用初探》

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ url: http://aslinwang.github.io
 author: aslinwang
 pygments: true
 markdown: redcarpet
+highlighter: rouge
 redcarpet:
     extensions: ["fenced_code_blocks", "autolink", "tables", "strikethrough"]
 paginate: 24
