--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-markdown: rdiscount
 permalink: /:year/:month/:title/
 url: http://aslinwang.github.io
 author: aslinwang
 pygments: true
-markdown: redcarpet
+markdown: kramdown
 highlighter: rouge
 redcarpet:
     extensions: ["fenced_code_blocks", "autolink", "tables", "strikethrough"]
